dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/yase.h)
AC_CONFIG_HEADER(src/config.h)
AC_CONFIG_SUBDIRS(libxml2-2.4.15 wget-1.5.3)

dnl Check for libxml
AC_ARG_ENABLE(libxml,
[  --enable-libxml        enable support for libxml parser],
USE_LIBXML=yes, USE_LIBXML=$enableval)
test x"${USE_LIBXML}" = xyes && AC_DEFINE(USE_LIBXML)
if test x"${USE_LIBXML}" = xyes; then
	use_libxml=1
else
	use_libxml=0
fi
AC_SUBST(use_libxml)

dnl Check for wget 
AC_ARG_ENABLE(wget,
[  --disable-wget          disable support for wget robot],
USE_WGET=$enableval, USE_WGET=yes)
test x"${USE_WGET}" = xyes && AC_DEFINE(USE_WGET)
if test x"${USE_WGET}" = xyes; then
	use_wget=1
else
	use_wget=0
fi
AC_SUBST(use_wget)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl Handle AIX
AC_AIX

dnl Handle mingw32
AC_MINGW32

dnl Handle cygwin
AC_CYGWIN

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(unistd.h)

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup snprintf)

AC_OUTPUT([Makefile src/Makefile doc/Makefile test/Makefile sample/Makefile examples/Makefile], [echo timestamp > stamp-h])
